feat: renderizado HTML
