# services/renderizado.go
@@ -13,16 +13,20 @@ import (
 	"github.com/udistrital/utils_oas/errorhandler"
 )
 
-func DefinirPlantilla(requestData models.RenderizadoPlantilla) (string, error) {
+func Renderizar(requestData models.Renderizado) (string, error) {
 	defer errorhandler.HandlePanic(nil)
 
-	html, err := TraerPlantilla(requestData.Plantilla_id)
-	//logs.Info("HTML: ", html)
+	html, err := ObtenerPlantilla(requestData.Plantilla_id)
 	if err != nil {
 		logs.Error(err)
 		return "", err
 	}
-	plantillaRenderizada, err := Renderizar(html, requestData.Datos)
+	requestBody := models.RenderizadoPDF{
+		Html: *html,
+		Css: requestData.Css,
+		Datos: requestData.Data,
+	}
+	plantillaRenderizada, err := GenerarPDF(requestBody)
 	if err != nil {
 		logs.Error(err)
 		return "", err
@@ -30,76 +34,135 @@ func DefinirPlantilla(requestData models.RenderizadoPlantilla) (string, error) {
 	return plantillaRenderizada, nil
 }
 
-func TraerPlantilla(plantilla_id string) (*string, error) {
+func RenderizarPDF(requestData models.RenderizadoPDF) (string, error) {
 	defer errorhandler.HandlePanic(nil)
 
-	var response map[string]interface{}
-	apiUrl := beego.AppConfig.String("PlantillasCrudService")
+	plantillaRenderizada, err := GenerarPDF(requestData)
+	if err != nil {
+		logs.Error(err)
+		return "", err
+	}
+	return plantillaRenderizada, nil
+}
 
+func GenerarPDF(requestBody models.RenderizadoPDF) (string, error) {
+	defer errorhandler.HandlePanic(nil)
+	
+	response := models.ResponsePDF{}
+	err := Generar(requestBody, &response, "generar-pdf")
+	if err != nil {
+		return "", err
+	}
+	return response.Data, nil
+}
+
+func RenderizarHTML(requestData models.RenderizadoHTML) (string, error) {
+	defer errorhandler.HandlePanic(nil)
+
+	html, err := ObtenerPlantilla(requestData.Plantilla_id)
+	if err != nil {
+		logs.Error(err)
+		return "", err
+	}
+	plantillaRenderizada, err := GenerarHTML(html, requestData.Data)
+	if err != nil {
+		logs.Error(err)
+		return "", err
+	}
+	return plantillaRenderizada, nil
+}
+
+func GenerarHTML(html *string, data map[string]interface{}) (string, error) {
+	defer errorhandler.HandlePanic(nil)
+
+	requestBody := models.BodyHTML{
+		Html: *html,
+		Data: data,
+	}
+
+	response := models.ResponseHTML{}
+	err := Generar(requestBody, &response, "generar-html")
+	if err != nil {
+		return "", err
+	}
+	return response.Html, nil
+}
+
+func ObtenerPlantilla(plantilla_id string) (*string, error) {
+	defer errorhandler.HandlePanic(nil)
+
+	apiUrl := beego.AppConfig.String("PlantillasCrudService")
 	url := fmt.Sprintf("%s"+"/plantilla/"+"%s", apiUrl, plantilla_id)
+
 	resp, err := http.Get(url)
 	if err != nil {
 		return nil, err
 	}
 	defer resp.Body.Close()
+
 	body, err := io.ReadAll(resp.Body)
 	if err != nil {
 		return nil, err
 	}
+
 	if resp.StatusCode != http.StatusOK {
 		return nil, fmt.Errorf("error al obtener la plantilla: %s", string(body))
 	}
+
+	var response map[string]interface{}
 	if err := json.Unmarshal(body, &response); err != nil {
 		return nil, err
 	}
+	
 	data, ok := response["Data"].(map[string]interface{})
 	if !ok {
 		return nil, fmt.Errorf("error: no se pudo obtener 'Data' de la respuesta")
 	}
+
 	contenido, ok := data["contenido"].(string)
 	if !ok {
 		return nil, fmt.Errorf("error: 'contenido' no es de tipo string o no existe en 'Data'")
 	}
-
-	//logs.Info("Contenido de la plantilla: ", contenido)
 	return &contenido, nil
 }
 
-func Renderizar(html *string, data map[string]interface{}) (string, error) {
+func Generar(requestBody interface{}, responseBody interface{}, endpoint string) error {
 	defer errorhandler.HandlePanic(nil)
-
-	var response models.Response
-	api := beego.AppConfig.String("RenderizadoPlantillas")
-
-	url := fmt.Sprintf("%s"+"/generar-pdf", api)
-	//logs.Info("+++++++++++++++++++++++++++++ ", url)
-	requestBody := map[string]interface{}{
-		"html": *html,
-		"data": data,
-	}
+	
+	// Serializar el cuerpo de la solicitud
 	jsonBody, err := json.Marshal(requestBody)
 	if err != nil {
-		return "", err
+		return err
 	}
+
+	// Construir la URL
+	api := beego.AppConfig.String("RenderizadoPlantillas")
+	url := fmt.Sprintf("%s/%s", api, endpoint)
+
+	// Crear la solicitud HTTP
 	req, err := http.NewRequest("POST", url, bytes.NewBuffer(jsonBody))
 	if err != nil {
-		return "", err
+		return err
 	}
+
 	req.Header.Set("Content-Type", "application/json")
 	client := &http.Client{}
 	resp, err := client.Do(req)
 	if err != nil {
-		return "", err
+		return err
 	}
 	defer resp.Body.Close()
+	
+	// Leer el cuerpo de la respuesta
 	body, err := io.ReadAll(resp.Body)
 	if err != nil {
-		return "", err
+		return err
 	}
 
-	err = json.Unmarshal(body, &response)
+	// Deserializar la respuesta en el tipo proporcionado
+	err = json.Unmarshal(body, &responseBody)
 	if err != nil {
-		return "", err
+		return err
 	}
-	return response.Data, nil
+	return nil
 }
